Fix header links alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,7 +31,7 @@ header a:hover {
     line-height: 2.5;
     position: absolute;
     top: 10px;
-    right: 0;
+    right: 160px;
     text-align: right;
     font-family: 'Roboto', sans-serif;
     font-size: 0.8em;
